--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet"
   />
+  <link rel="manifest" href="manifest.json" />
+
 
   <style>
     /* CSS Reset and Box Sizing */
