--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     rel="stylesheet"
   />
   <link rel="manifest" href="manifest.json" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5559344603664576"
+     crossorigin="anonymous"></script>
 
 
   <style>
